; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_rtpdec_jpeg.c_jpeg_create_huffman_table.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_rtpdec_jpeg.c_jpeg_create_huffman_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32, i32*, i32*)* @jpeg_create_huffman_table to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @jpeg_create_huffman_table(i32* %0, i32 %1, i32 %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  store i32* %4, i32** %10, align 8
  store i32 0, i32* %12, align 4
  %13 = load i32*, i32** %6, align 8
  %14 = load i32, i32* %7, align 4
  %15 = shl i32 %14, 4
  %16 = load i32, i32* %8, align 4
  %17 = or i32 %15, %16
  %18 = call i32 @bytestream2_put_byte(i32* %13, i32 %17)
  store i32 1, i32* %11, align 4
  br label %19

19:                                               ; preds = %37, %5
  %20 = load i32, i32* %11, align 4
  %21 = icmp sle i32 %20, 16
  br i1 %21, label %22, label %40

22:                                               ; preds = %19
  %23 = load i32*, i32** %9, align 8
  %24 = load i32, i32* %11, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds i32, i32* %23, i64 %25
  %27 = load i32, i32* %26, align 4
  %28 = load i32, i32* %12, align 4
  %29 = add nsw i32 %28, %27
  store i32 %29, i32* %12, align 4
  %30 = load i32*, i32** %6, align 8
  %31 = load i32*, i32** %9, align 8
  %32 = load i32, i32* %11, align 4
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds i32, i32* %31, i64 %33
  %35 = load i32, i32* %34, align 4
  %36 = call i32 @bytestream2_put_byte(i32* %30, i32 %35)
  br label %37

37:                                               ; preds = %22
  %38 = load i32, i32* %11, align 4
  %39 = add nsw i32 %38, 1
  store i32 %39, i32* %11, align 4
  br label %19

40:                                               ; preds = %19
  store i32 0, i32* %11, align 4
  br label %41

41:                                               ; preds = %53, %40
  %42 = load i32, i32* %11, align 4
  %43 = load i32, i32* %12, align 4
  %44 = icmp slt i32 %42, %43
  br i1 %44, label %45, label %56

45:                                               ; preds = %41
  %46 = load i32*, i32** %6, align 8
  %47 = load i32*, i32** %10, align 8
  %48 = load i32, i32* %11, align 4
  %49 = sext i32 %48 to i64
  %50 = getelementptr inbounds i32, i32* %47, i64 %49
  %51 = load i32, i32* %50, align 4
  %52 = call i32 @bytestream2_put_byte(i32* %46, i32 %51)
  br label %53

53:                                               ; preds = %45
  %54 = load i32, i32* %11, align 4
  %55 = add nsw i32 %54, 1
  store i32 %55, i32* %11, align 4
  br label %41

56:                                               ; preds = %41
  %57 = load i32, i32* %12, align 4
  %58 = add nsw i32 %57, 17
  ret i32 %58
}

declare dso_local i32 @bytestream2_put_byte(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
